[package]
name = "grin-vanity"
version = "0.1.0"
description = "A cli vanity address generator for Grin"
edition = "2021"
authors = ["Makis Christou <makis_christou@protonmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
ed25519-dalek = "1.0.1"
grin_core = "5.1.2"
grin_keychain = "5.1.2"
grin_util = "5.1.2"
grin_wallet = "5.1.0"
grin_wallet_libwallet = "5.1.0"
rand = "0.8.5"
